--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentication</title>
 
-    <script src="jquery.js" type="text/javascript"></script>
-    <script defer src="fontawesome.js"></script>
-    <link rel="stylesheet" href="bulma.css">
+    <script defer src="rsc/fontawesome.js"></script>
+    <link rel="stylesheet" href="rsc/bulma.css">
 </head>
-<script>
-    const regUrl = "localhost:2345/user/registration"
-    const logUrl = "localhost:2345/user/login"
-</script>
-
 <body style="margin-left: 10%; margin-right: 10%;">
     <figure class="image" style="margin-left: 25%; margin-right: 25%; margin-bottom: 15px; margin-top: 15px">
         <img src="Logo.png" style=" border-radius: 25px;">
@@ -26,7 +20,7 @@
                     Registration
                 </h2>
                 <hr>
-                <form action="/user_registration.php" method="POST">
+                <form action="/intermediate/user_registration.php" method="POST">
                     <div class="field">
                         <label class="label has-text-warning is-4">Username</label>
                         <div class="control has-icons-left has-icons-right">
@@ -68,7 +62,7 @@
                     Login
                 </h2>
                 <hr>
-                <form action="/user_login.php" method="POST">
+                <form action="/intermediate/user_login.php" method="POST">
                     <div class="field">
                         <label class="label has-text-warning is-4">Username</label>
                         <div class="control has-icons-left has-icons-right">
