added registration and login page

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -168,7 +168,7 @@
                                         </button>
                                     </p>
                                 </div>
-                                <form action="" method=POST class="menu_disabled" id="join_room_fields">
+                                <form action="/login" method=POST class="menu_disabled" id="join_room_fields">
                                     <p class="control">
                                         <button class="button is-black is-static">
                                             <span class="icon is-small is-left">
@@ -193,7 +193,6 @@
                                         </a>
                                     </p>
                                 </form>
-                                <p>No login or registration required.</p>
                             </div>
                         </div>
                     </div>
