changed start chatting with an href instead for now.

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -139,6 +139,20 @@
                                 Dyspochat is fast, secure, disposable chat service, no registration, no tracking !
                             </h2>
                             <div>
+                                <div class="field has-addons">
+                                    <p class="control">
+                                        <a class="button is-warning" href="https://app.dyspochat.com">
+                                            Start Chatting
+                                        </a>
+                                    </p>
+                                    <p class="control">
+                                        <a class="button is-info is-outlined is-static">
+                                            Download (Coming Soon)
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- <div>
                                 <div class="field has-addons" id="start_chatting">
                                     <p class="control">
                                         <button class="button is-warning" onclick="hero_start_chatting()">
@@ -193,7 +207,7 @@
                                         </a>
                                     </p>
                                 </form>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="column is-one-fifth"></div>
@@ -305,9 +319,9 @@
                         <h2 class="subtitle is-4">You got nothing to lose!</h2>
                     </div>
                     <div class="column">
-                        <button class="button is-warning" style="margin-left: 50%; padding: 8%; transform: translate(-40%, 0)">
+                        <a class="button is-warning" href="https://app.dyspochat.com" style="margin-left: 50%; padding: 8%; transform: translate(-40%, 0)">
                             Go To App
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
